repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_vertical_allrepos__test_repository_filters__exclude_sources_repositry.snap
---
source: repology-webapp/tests/snapshot_tests/badge_vertical_allrepos.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: content-length: 1283
---
<svg xmlns="http://www.w3.org/2000/svg" width="155" height="45"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="15" font-weight="bold"><text x="77" y="13" dominant-baseline="central" fill="#010101" fill-opacity=".3">Packaging status</text><text x="77" y="12" dominant-baseline="central">Packaging status</text></g><rect x="95" y="25" width="60" height="20" fill="#e05d44"/><rect y="25" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="90" y="36" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">freshcode.club</text><text x="90" y="35" text-anchor="end" dominant-baseline="central">freshcode.club</text><text x="125" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="125" y="35" text-anchor="middle" dominant-baseline="central">1.0</text></g></g></svg>
